--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -24,6 +24,10 @@
     @apply text-gray-900 bg-gray-50 dark:bg-gray-950 dark:text-gray-200;
   }
 
+  input {
+    @apply text-gray-600;
+  }
+
   .using-mouse * {
     outline: none !important;
   }
